chore: address PR #375 review comments
Copilot bot:
- Fix "Endpoints exercised" banners in both duplicate-check feature files:
  * Void endpoint is POST /api/v1/claims/{id}/void, not PATCH.
  * Polling hits /bulk-submissions/{id}/summary (was missing on DCLH,
    incorrect on disbursements). Also list the local-mode seed endpoints
    (POST /submissions, POST /submissions/{id}/claims) for completeness.
- BddApiStepSupport.waitForBulkSubmissionTerminalStatus: add an overload
  that takes a Duration; wire EVENT_SERVICE_POLL_TIMEOUT (90s) into the
  UAT-mode wait so real event-service callbacks don't fail on the 3s
  short timeout used for local mode.
- LegalHelpDuplicateChecksSteps.aLegalHelpSubmissionFromFileForOffice:
  schedule the copied classpath fixture for deletion on JVM exit so long
  BDD runs don't leave copies in /tmp.

@andrewJohnysJustice:
- BddScenarioContext: use Lombok @Getter/@Setter at the class level;
  keep only the custom setter for generatedFilePath (which also derives
  generatedFileName).
- LegalHelpDuplicateChecksSteps and
  LegalHelpDisbursementsDuplicateChecksSteps: use @Slf4j instead of a
  hand-written LoggerFactory field.
- BddApiStepSupport.createSubmission / createClaim / voidClaim: rewrite
  JSON payloads as Java text blocks with .formatted(...); no behaviour
  change, easier to read.
- pickOffice(...) in both step classes: replace the loop with a Stream
  filter/map/findFirst.
- requireOffice(...): use StringUtils.isBlank instead of the null +
  isBlank check.

Verified: ./gradlew :claims-data:service:bddTest — SUCCESS 67/67 in 40s.